--- a/index.html
+++ b/index.html
@@ -507,7 +507,9 @@
             </div>
         </div>
     </section>
-
+<div class="hero-logo">
+    <img src="logo.png" alt="Rachid Coaching Life">
+</div>
     <!-- Gratuit Banner -->
     <div class="gratuit-banner">
         🎁 TOUS NOS SERVICES SONT 100% GRATUITS - AUCUN ABONNEMENT NI PRESTATION PAYANTE
