--- a/index-logo-correct.html
+++ b/index-logo-correct.html
@@ -494,6 +494,10 @@
             }
         }
     </style>
+    <head>
+  <meta charset="UTF-8">
+  <title>Rachid Coaching Life</title>
+  <link rel="stylesheet" href="CSS/style.css"> <!-- Lien vers le CSS -->
 </head>
 <body>
     <!-- Navigation -->
