--- a/index-logo-correct.html
+++ b/index-logo-correct.html
@@ -529,7 +529,7 @@
                 <a href="#services" class="btn btn-outline">Découvrir les services</a>
             </div>
             <div class="hero-logo">
-                <img src="logo.png" alt="Rachid Coaching Life">
+                <img src="images/logo.png" class="logo" alt="Logo">
             </div>
         </div>
     </section>
@@ -609,7 +609,7 @@
                 </div>
                 
                 <div>
-                    <img src="salon-de-coaching.png" alt="Salon de coaching" style="width: 100%; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
+                    <img src="images/salon-de-coaching.png" alt="Coaching" style="width: 100%; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
                 </div>
             </div>
         </div>
