--- a/index.html
+++ b/index.html
@@ -464,7 +464,9 @@
             </div>
             <div class="services-grid">
                 <div class="service-card">
-                    <div class="service-icon"><img src="images/service-brain.png" alt="Développement Personnel" style="width: 30px; height: 30px;"></div>
+                    <div class="service-icon">
+  <img src="images/service-brain.png" alt="Développement Personnel" style="width: 30px; height: 30px;">
+</div>
                     <h3>Développement Personnel</h3>
                     <p>Apprenez à mieux vous connaître, à gérer vos émotions et à développer une confiance en soi inébranlable.</p>
                     <ul class="service-features">
@@ -474,7 +476,9 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon"><img src="images/service-briefcase.png" alt="Coaching Professionnel" style="width: 30px; height: 30px;"></div>
+                    <div class="service-icon">
+  <img src="images/service-briefcase.png" alt="Coaching Professionnel" style="width: 30px; height: 30px;">
+</div>
                     <h3>Coaching Professionnel</h3>
                     <p>Boostez votre carrière, améliorez vos compétences en leadership et atteignez vos objectifs professionnels.</p>
                     <ul class="service-features">
@@ -484,7 +488,9 @@
                     </ul>
                 </div>
                 <div class="service-card">
-                    <div class="service-icon"><img src="images/service-heart.png" alt="Relations & Bien-être" style="width: 30px; height: 30px;"></div>
+                    <div class="service-icon">
+  <img src="images/service-heart.png" alt="Relations & Bien-être" style="width: 30px; height: 30px;">
+</div>
                     <h3>Relations & Bien-être</h3>
                     <p>Améliorez vos relations personnelles et développez une mentalité positive pour une vie plus épanouie.</p>
                     <ul class="service-features">
@@ -572,9 +578,10 @@
                     </div>
                     <h4 style="margin-top: 40px;">Réseaux sociaux</h4>
                     <div class="social-links">
-                        <a href="https://instagram.com/rachid_coaching_life"  class="social-btn instagram"><img src="images/icons/icône-instagram.png" alt="Instagram" style="width: 24px; height: 24px;"></a>
-                        <a href="https://www.facebook.com/rachid.coachinglife/"  class="social-btn facebook"><img src="images/icons/icône-facebook.png" alt="Facebook" style="width: 24px; height: 24px;"></a>
-                        <a href="https://tiktok.com/@rachid_coaching_life"  class="social-btn tiktok"><img src="images/icons/icône-tiktok.png" alt="TikTok" style="width: 24px; height: 24px;"></a>
+                        <a href="https://instagram.com/rachid_coaching_life" class="social-btn instagram">
+  <img src="images/instagram-icon.png" alt="Instagram" style="width: 20px; height: 20px; margin-right: 8px;">
+  Instagram
+</a>
                     </div>
                 </div>
                 <div class="contact-form">
